--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.3.1"
-  }
+  },
+  "description": "",
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC"
 }
